--- a/cart.html
+++ b/cart.html
@@ -97,35 +97,39 @@
                     <table class="table">
                       <thead>
                         <tr>
-                          <th scope="col">Produk</th>
-                          <th scope="col">Harga Satuan</th>
-                          <th scope="col">Jumlah</th>
-                          <th scope="col">Total Harga</th>
-                          <th scope="col">Aksi</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td><a href="single-product.html">Gentle Lavender Bliss</a></td>
-                          <td>$120</td>
-                          <td>2</td>
-                          <td>$240</td>
-                          <td><button class="btn btn-danger btn-sm">Hapus</button></td>
-                        </tr>
-                        <tr>
-                          <td><a href="single-product.html">Citrus Splash Delight</a></td>
-                          <td>$680</td>
-                          <td>1</td>
-                          <td>$680</td>
-                          <td><button class="btn btn-danger btn-sm">Hapus</button></td>
-                        </tr>
-                        <tr>
-                          <td><a href="single-product.html">Minty Fresh Revival</a></td>
-                          <td>$750</td>
-                          <td>3</td>
-                          <td>$2250</td>
-                          <td><button class="btn btn-danger btn-sm">Hapus</button></td>
-                        </tr>
+                            <th scope="col">Order ID</th>
+                            <th scope="col">Product</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">Total Price</th>
+                            <th scope="col">Status</th>
+                            <th scope="col">Date</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>#001</td>
+                            <td><a href="single-product.html">Small battery</a></td>
+                            <td>2</td>
+                            <td>Rp.250.000</td>
+                            <td>Delivered</td>
+                            <td>2024-10-01</td>
+                          </tr>
+                          <tr>
+                            <td>#002</td>
+                            <td><a href="single-product.html">Generator</a></td>
+                            <td>1</td>
+                            <td>Rp.500.000</td>
+                            <td>Processing</td>
+                            <td>2024-10-05</td>
+                          </tr>
+                          <tr>
+                            <td>#003</td>
+                            <td><a href="single-product.html">Large Battery</a></td>
+                            <td>3</td>
+                            <td>Rp.350.000</td>
+                            <td>Processing</td>
+                            <td>2024-10-10</td>
+                          </tr>
                         <!-- Tambahkan produk lain jika diperlukan -->
                       </tbody>
                     </table>
