--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <h5 class="card-title fs-5 text-uppercase">
                   <a href="single-product.html">Infinity Power Pendulum Generator</a>
                 </h5>
-                <span class="item-price text-primary fs-3 fw-light">$870</span>
+                <span class="item-price text-primary fs-3 fw-light">$$$</span>
               </div>
             </div>
           </div>
@@ -218,7 +218,7 @@
                 <h5 class="card-title fs-5 text-uppercase">
                   <a href="single-product.html">Infinity Power Pendulum Generator</a>
                 </h5>
-                <span class="item-price text-primary fs-3 fw-light">$680</span>
+                <span class="item-price text-primary fs-3 fw-light">$$$</span>
               </div>
             </div>
           </div>
@@ -236,7 +236,7 @@
                 <h5 class="card-title fs-5 text-uppercase">
                   <a href="single-product.html">Infinity Power Pendulum Generator</a>
                 </h5>
-                <span class="item-price text-primary fs-3 fw-light">$750</span>
+                <span class="item-price text-primary fs-3 fw-light">$$$</span>
               </div>
             </div>
           </div>
@@ -254,7 +254,7 @@
                 <h5 class="card-title fs-5 text-uppercase">
                   <a href="single-product.html">Infinity Power Pendulum Generator</a>
                 </h5>
-                <span class="item-price text-primary fs-3 fw-light">$650</span>
+                <span class="item-price text-primary fs-3 fw-light">$$$</span>
               </div>
             </div>
           </div>
@@ -272,7 +272,7 @@
                 <h5 class="card-title fs-5 text-uppercase">
                   <a href="single-product.html">Infinity Power Pendulum Generator</a>
                 </h5>
-                <span class="item-price text-primary fs-3 fw-light">$750</span>
+                <span class="item-price text-primary fs-3 fw-light">$$$</span>
               </div>
             </div>
           </div>
@@ -290,7 +290,7 @@
                 <h5 class="card-title fs-5 text-uppercase">
                   <a href="single-product.html">Infinity Power Pendulum Generator</a>
                 </h5>
-                <span class="item-price text-primary fs-3 fw-light">$750</span>
+                <span class="item-price text-primary fs-3 fw-light">$$$</span>
               </div>
             </div>
           </div>
@@ -308,7 +308,7 @@
                 <h5 class="card-title fs-5 text-uppercase">
                   <a href="single-product.html">Infinity Power Pendulum Generator</a>
                 </h5>
-                <span class="item-price text-primary fs-3 fw-light">$750</span>
+                <span class="item-price text-primary fs-3 fw-light">$$$</span>
               </div>
             </div>
           </div>
@@ -326,7 +326,7 @@
                 <h5 class="card-title fs-5 text-uppercase">
                   <a href="single-product.html">Infinity Power Pendulum Generator</a>
                 </h5>
-                <span class="item-price text-primary fs-3 fw-light">$750</span>
+                <span class="item-price text-primary fs-3 fw-light">$$$</span>
               </div>
             </div>
           </div>
@@ -336,7 +336,7 @@
     <section id="our-video">
       <div class="video-section jarallax d-flex align-items-center justify-content-center" style="background: url(images/video-image.jpg) no-repeat;">
         <div class="video-player text-center">
-          <a type="button" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/W_tIumKa8VY" data-bs-target="#myModal" class="play-btn position-relative">
+          <a type="button" data-bs-toggle="modal" data-src="https://youtu.be/rm1UK-5-AD4?si=ClEeRik52I1zjgxl" data-bs-target="#myModal" class="play-btn position-relative">
             <svg class="position-absolute top-0 bottom-0 start-0 end-0 m-auto" width="41" height="41"><use xlink:href="#play"></use></svg>
             <img src="images/text-pattern.png" alt="pattern" class="text-pattern">
           </a>
@@ -440,27 +440,56 @@
           </div>
         </div>
       </div>
-    </section>    
-    <section id="banner" data-aos="fade" data-aos-once="true">
-      <div class="banner-content-1 position-relative" style="background:url('images/banner-img1.jpg') no-repeat left; background-size: cover; background-position: center; height: 100%;">
-        <div class="banner-content-text position-absolute" data-aos="fade" data-aos-delay="1000" data-aos-easing="ease-in" data-aos-duration="1000" data-aos-once="true">
-          <h2>Bar Soaps</h2>
-          <a href="shop.html" class="btn">Shop it now</a>
-        </div>
+</section>    
+<section id="banner" data-aos="fade" data-aos-once="true">
+  <div class="banner-content-1 position-relative" style="background:url('images/banner-img1.jpg') no-repeat left; background-size: cover; background-position: center; height: 100%;">
+    <div class="banner-content-text position-absolute" data-aos="fade" data-aos-delay="1000" data-aos-easing="ease-in" data-aos-duration="1000" data-aos-once="true">
+      <h2>Small IPPG</h2>
+      <button class="btn" onclick="showDescription()">Read More</button>
+    </div>
+  </div>
+  <div class="banner-content-2 position-relative" style="background:url('images/banner-img1.jpg') no-repeat left; background-size: cover; background-position: center; height: 100%;">
+    <div class="banner-content-text position-absolute" data-aos="fade" data-aos-delay="1000" data-aos-easing="ease-in" data-aos-duration="1000" data-aos-once="true">
+      <h2>Medium IPPG</h2>
+      <button class="btn" onclick="showDescription()">Read More</button>
+    </div>
+  </div>
+  <div class="banner-content-3 position-relative" style="background:url('images/banner-img1.jpg') no-repeat left; background-size: cover; background-position: left; height: 100%;">
+    <div class="banner-content-text position-absolute" data-aos="fade" data-aos-delay="1000" data-aos-easing="ease-in" data-aos-duration="1000" data-aos-once="true">
+      <h2>Large IPPG</h2>
+      <button class="btn" onclick="showDescription()">Read More</button>
+    </div>
+  </div>
+</section>
+
+<!-- Modal for Description -->
+<div class="modal fade" id="descriptionModal" tabindex="-1" aria-labelledby="descriptionModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="descriptionModalLabel">Description</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="banner-content-2 position-relative" style="background:url('images/banner-img1.jpg') no-repeat left; background-size: cover; background-position: center; height: 100%;">
-        <div class="banner-content-text position-absolute" data-aos="fade" data-aos-delay="1000" data-aos-easing="ease-in" data-aos-duration="1000" data-aos-once="true">
-          <h2>Specialty Soaps</h2>
-          <a href="shop.html" class="btn">Shop collection</a>
-        </div>
+      <div class="modal-body">
+        Ini adalah teknologi pembangkit listrik baru.
       </div>
-      <div class="banner-content-3 position-relative" style="background:url('images/banner-img1.jpg') no-repeat left; background-size: cover; background-position: left; height: 100%;">
-        <div class="banner-content-text position-absolute" data-aos="fade" data-aos-delay="1000" data-aos-easing="ease-in" data-aos-duration="1000" data-aos-once="true">
-          <h2>Gift Sets</h2>
-          <a href="shop.html" class="btn">Shop collection</a>
-        </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
       </div>
-    </section>
+    </div>
+  </div>
+</div>
+
+<script>
+  function showDescription() {
+    var descriptionModal = new bootstrap.Modal(document.getElementById('descriptionModal'));
+    descriptionModal.show();
+  }
+</script>
+
+<!-- Tambahkan JavaScript Bootstrap jika belum ada -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+
     
     <footer id="footer" class="overflow-hidden padding-xlarge pb-0">
       <div class="container">
@@ -470,7 +499,7 @@
               <div class="col-lg-3 col-sm-6 pb-3" data-aos="fade" data-aos-easing="ease-in" data-aos-duration="1000" data-aos-once="true">
                 <div class="footer-menu">
                   <img src="images/main-logo.png" alt="logo" class="mb-2">
-                  <p>Nunc tristique facilisis consectetur vivamus ut porta porta aliquam vitae vehicula leo nullam urna lectus.</p>
+                  <p>Sesungguhnya Somay lebih enak dari dimsum, kecuali dimsum mentai wkwkw.</p>
                 </div>
               </div>
               <div class="col-lg-2 col-sm-6 pb-3" data-aos="fade" data-aos-easing="ease-in" data-aos-duration="1200" data-aos-once="true">
@@ -478,16 +507,16 @@
                   <h4 class="widget-title pb-2">Quick Links</h4>
                   <ul class="menu-list list-unstyled">
                     <li class="menu-item pb-2">
-                      <a href="about.html">About</a>
+                      <a href="#about">About</a>
                     </li>
                     <li class="menu-item pb-2">
-                      <a href="shop.html">Shop</a>
+                      <a href="#products">Product</a>
                     </li>
                     <li class="menu-item pb-2">
-                      <a href="contact.html">Contact</a>
+                      <a href="#faqs">Faqs</a>
                     </li>
                     <li class="menu-item pb-2">
-                      <a href="login.html">Account</a>
+                      <a href="index.html">Account</a>
                     </li>
                   </ul>
                 </div>
@@ -497,13 +526,13 @@
                   <h4 class="widget-title pb-2">Contact info</h4>
                   <ul class="menu-list list-unstyled">
                     <li class="menu-item pb-2">
-                      <a href="#">Tea Berry, Marinette, USA</a>
+                      <a href="https://wa.me/085691610764">Admin X</a>
                     </li>
                     <li class="menu-item pb-2">
-                      <a href="#">+55 111 222 333 44</a>
+                      <a href="https://wa.me/085691610764">+62 8569161 0764</a>
                     </li>
                     <li class="menu-item pb-2">
-                      <a href="mailto:">yourinfo@gmail.com</a>
+                      <a href="mailto:">anggororois@gmail.com</a>
                     </li>
                   </ul>
                 </div>
@@ -511,39 +540,39 @@
               <div class="col-lg-3 col-sm-6 pb-3" data-aos="fade" data-aos-easing="ease-in" data-aos-duration="1600" data-aos-once="true">
                 <div class="footer-menu">
                   <h4 class="widget-title pb-2">Social info</h4>
-                  <p>You can follow us on our social platforms to get updates.</p>
+                  <p>Di follow ya ges yaa.</p>
                   <div class="social-links">
                     <ul class="d-flex list-unstyled">
                       <li>
-                        <a href="#">
+                        <a href="https://www.facebook.com/rois_anggoro/">
                           <svg class="facebook">
                             <use xlink:href="#facebook">
                           </svg>
                         </a>
                       </li>
                       <li>
-                        <a href="#">
+                        <a href="https://www.instagram.com/rois.anggr_/">
                           <svg class="instagram">
                             <use xlink:href="#instagram">
                           </svg>
                         </a>
                       </li>
                       <li>
-                        <a href="#">
+                        <a href="https://x.com/susuuukedelaii">
                           <svg class="twitter">
                             <use xlink:href="#twitter">
                           </svg>
                         </a>
                       </li>
                       <li>
-                        <a href="#">
+                        <a href="https://www.linkedin.com/in/rois-anggoro/">
                           <svg class="linkedin">
                             <use xlink:href="#linkedin">
                           </svg>
                         </a>
                       </li>
                       <li>
-                        <a href="#">
+                        <a href="www.youtube.com/@Roissssssss">
                           <svg class="youtube">
                             <use xlink:href="#youtube">
                           </svg>
