--- a/orders.html
+++ b/orders.html
@@ -107,26 +107,26 @@
             <tbody>
               <tr>
                 <td>#001</td>
-                <td><a href="single-product.html">Gentle Lavender Bliss</a></td>
+                <td><a href="single-product.html">Small battery</a></td>
                 <td>2</td>
-                <td>$240</td>
+                <td>Rp.250.000</td>
                 <td>Delivered</td>
                 <td>2024-10-01</td>
               </tr>
               <tr>
                 <td>#002</td>
-                <td><a href="single-product.html">Citrus Splash Delight</a></td>
+                <td><a href="single-product.html">Generator</a></td>
                 <td>1</td>
-                <td>$680</td>
+                <td>Rp.500.000</td>
                 <td>Processing</td>
                 <td>2024-10-05</td>
               </tr>
               <tr>
                 <td>#003</td>
-                <td><a href="single-product.html">Minty Fresh Revival</a></td>
+                <td><a href="single-product.html">Large Battery</a></td>
                 <td>3</td>
-                <td>$2250</td>
-                <td>Cancelled</td>
+                <td>Rp.350.000</td>
+                <td>Processing</td>
                 <td>2024-10-10</td>
               </tr>
               <!-- Tambahkan lebih banyak entri pesanan sesuai kebutuhan -->
