--- a/index(adm).html
+++ b/index(adm).html
@@ -106,14 +106,14 @@
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle me-0" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Account</a>
                     <div class="dropdown-menu dropdown-menu-end p-3">
-                      <h4 class="text-primary">Admin Profile</h4>
+                      <h4 class="text-primary">Add</h4>
                       <ul class="list-group mb-3">
                         <li class="list-group-item bg-transparent border-dark d-flex justify-content-between lh-sm">
                           <div>
                             <h5 class="card-title fs-5 text-uppercase">
-                                <a href="profile.html">View Profile</a>
+                                <a href="profile(adm).html">Add User</a>
                               </h5>                              
-                            <small class="text-body-secondary">Manage account.</small>
+                            <small class="text-body-secondary">For Admin/Customer</small>
                           </div>
                         </li>
                         <li class="list-group-item bg-transparent border-dark d-flex justify-content-between lh-sm">
@@ -127,39 +127,15 @@
                   </li>
                   
                   <li class="cart-dropdown nav-item dropdown">
-                    <a class="nav-link dropdown-toggle me-0" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Orders</a>
+                    <a class="nav-link dropdown-toggle me-0" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Service</a>
                     <div class="dropdown-menu dropdown-menu-end p-3">
                       <h4 class="d-flex justify-content-between align-items-center mb-3">
-                        <span class="text-primary">Customer Orders</span>
-                        <span class="badge bg-primary rounded-pill">2</span>
+                        <span class="text-primary">Customer Service</span>
                       </h4>
-                      <ul class="list-group mb-3">
-                        <li class="list-group-item bg-transparent border-dark d-flex justify-content-between lh-sm">
-                          <div>
-                            <h5 class="card-title fs-5 text-uppercase">
-                              <a>Generator</a>
-                            </h5>
-                            <small class="text-body-secondary">Generator for electricity.</small>
-                          </div>
-                          <span class="text-primary">Rp.500.000</span>
-                        </li>
-                        <li class="list-group-item bg-transparent border-dark d-flex justify-content-between lh-sm">
-                          <div>
-                            <h5 class="card-title fs-5 text-uppercase">
-                              <a >Large Battery</a>
-                            </h5>
-                            <small class="text-body-secondary">Long-life battery source.</small>
-                          </div>
-                          <span class="text-primary">Rp.350.000</span>
-                        </li>
-                        <li class="list-group-item bg-transparent border-dark d-flex justify-content-between">
-                          <span class="text-uppercase"><b>Total (Rp)</b></span>
-                          <strong>Rp.850.000</strong>
-                        </li>
-                      </ul>
+                      
                       <div class="d-flex flex-wrap justify-content-center">
-                        <a href="orders.html" class="w-100 btn btn-dark mb-1" type="submit">View More</a>
-                        <a href="shipping.html" class="w-100 btn btn-primary" type="submit">Go To Shipping</a>
+                        <a href="orders.html" class="w-100 btn btn-dark mb-1" type="submit">Maintanance Request</a>
+                        <a href="shipping.html" class="w-100 btn btn-primary" type="submit">Part Request</a>
                       </div>
                     </div>
                   </li>
