--- a/index(log).html
+++ b/index(log).html
@@ -116,58 +116,25 @@
                             <small class="text-body-secondary">Manage account.</small>
                           </div>
                         </li>
-                        <li class="list-group-item bg-transparent border-dark d-flex justify-content-between lh-sm">
-                          <div>
-                            <h5 class="card-title fs-5 text-uppercase">
-                              <a href="orders.html">Order History</a>
-                            </h5>
-                            <small class="text-body-secondary">Review orders.</small>
-                          </div>
-                        </li>
-                      </ul>
                       <div class="d-flex flex-wrap justify-content-center">
                         <a href="index.html" class="w-100 btn btn-dark mb-1" type="submit">Logout</a>
                       </div>
                     </div>
                   </li>
-                  
                   <li class="cart-dropdown nav-item dropdown">
-                    <a class="nav-link dropdown-toggle me-0" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Cart(2)</a>
-                    <div class="dropdown-menu dropdown-menu-end p-3">
-                      <h4 class="d-flex justify-content-between align-items-center mb-3">
-                        <span class="text-primary">My Cart</span>
-                        <span class="badge bg-primary rounded-pill">2</span>
-                      </h4>
-                      <ul class="list-group mb-3">
-                        <li class="list-group-item bg-transparent border-dark d-flex justify-content-between lh-sm">
-                          <div>
-                            <h5 class="card-title fs-5 text-uppercase">
-                              <a >Generator</a>
-                            </h5>
-                            <small class="text-body-secondary">Generator for electricity.</small>
-                          </div>
-                          <span class="text-primary">Rp.500.000</span>
-                        </li>
-                        <li class="list-group-item bg-transparent border-dark d-flex justify-content-between lh-sm">
-                          <div>
-                            <h5 class="card-title fs-5 text-uppercase">
-                              <a >Large Battery</a>
-                            </h5>
-                            <small class="text-body-secondary">Long-life battery source.</small>
-                          </div>
-                          <span class="text-primary">Rp.350.000</span>
-                        </li>
-                        <li class="list-group-item bg-transparent border-dark d-flex justify-content-between">
-                          <span class="text-uppercase"><b>Total (Rp)</b></span>
-                          <strong>Rp.850.000</strong>
-                        </li>
-                      </ul>
-                      <div class="d-flex flex-wrap justify-content-center">
-                        <a href="cart.html" class="w-100 btn btn-dark mb-1" type="submit">View Cart</a>
-                        <a href="checkout.html" class="w-100 btn btn-primary" type="submit">Go to checkout</a>
-                      </div>
-                    </div>
-                  </li>
+  <a class="nav-link dropdown-toggle me-0" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Services</a>
+  <div class="dropdown-menu dropdown-menu-end p-3">
+    <h4 class="d-flex justify-content-between align-items-center mb-3">
+      <span class="text-primary">Your Services</span>
+    </h4>
+    <div class="d-flex flex-wrap justify-content-center">
+      <!-- Link modifikasi dengan penghapusan atribut 'type="submit"' -->
+      <a href="orders(log).html" class="w-100 btn btn-dark mb-1">Request A Maintenance</a>
+      <a href="orders%28log%29.html" class="w-100 btn btn-primary">Request A Part</a>
+    </div>
+  </div>
+</li>
+
                 </ul>
               </ul>
             </div>
