--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link me-0" href="login.html">Account</a>
+                    <a class="nav-link me-0" href="login.html">Login</a>
                   </li>
 
 
@@ -516,7 +516,7 @@
                       <a href="#faqs">Faqs</a>
                     </li>
                     <li class="menu-item pb-2">
-                      <a href="index.html">Account</a>
+                      <a href="index.html">Login</a>
                     </li>
                   </ul>
                 </div>
